--- a/SpringMVCApp1.1/src/main/webapp/WEB-INF/view/first/hello.html
+++ b/SpringMVCApp1.1/src/main/webapp/WEB-INF/view/first/hello.html
@@ -7,6 +7,8 @@
 <body>
 Hello!
 
-<a href="/goodbye"> Say goodbye</a> or <a href="/exit"> Exit </a>
+<a href="/first/goodbye"> Say goodbye </a> or <a href="/exit"> Exit </a>
+or <a href="/first/hello?name=Alena&surname=Minis"> Request with parameters </a>
+    
 </body>
 </html>
