--- a/CRUD_App1/src/main/webapp/WEB-INF/views/people/show.html
+++ b/CRUD_App1/src/main/webapp/WEB-INF/views/people/show.html
@@ -8,8 +8,10 @@
 
 <body>
 
-<p th:text="${person.getName()}">VALUE</p>
-<p th:text="${person.getId()}">VALUE</p>
+<p style="color: darkolivegreen" th:text="${person.getName() + ', ' + person.getAge()}">VALUE</p>
+<p style="color: darkolivegreen" th:text="${'Email: ' + person.getEmail()}">VALUE</p>
+<p style="color: darkolivegreen" th:text="${person.getId()}">VALUE</p>
+
 
 <a th:href="@{/people/{id}/edit(id=${person.getId()})}">Edit</a>
 
