--- a/CRUD_App1(jdbc template)/src/main/webapp/WEB-INF/views/people/edit.html
+++ b/CRUD_App1(jdbc template)/src/main/webapp/WEB-INF/views/people/edit.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Update person</title>
 </head>
-<body> 
-  
+<body>
+
 <form th:method="PATCH" th:action="@{/people/{id}(id=${person.getId()})}" th:object="${person}">
     <label for="name">Enter name:  </label>
     <input type="text" th:field="*{name}" id="name"/>
@@ -22,6 +22,12 @@
     <label for="email">Enter email:  </label>
     <input type="text" th:field="*{email}" id="email"/>
     <div style="color: red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error</div>
+
+    <br/>
+
+    <label for="address">Enter address:  </label>
+    <input type="text" th:field="*{address}" id="address"/>
+    <div style="color: red" th:if="${#fields.hasErrors('address')}" th:errors="*{address}">Address error</div>
 
     <br/>
 
