--- a/CRUD_App1(jdbc template)/src/main/webapp/WEB-INF/views/people/show.html
+++ b/CRUD_App1(jdbc template)/src/main/webapp/WEB-INF/views/people/show.html
@@ -10,6 +10,7 @@
 
 <p style="color: darkolivegreen" th:text="${person.getName() + ', ' + person.getAge()}">VALUE</p>
 <p style="color: darkolivegreen" th:text="${'Email: ' + person.getEmail()}">VALUE</p>
+<p style="color: darkolivegreen" th:text="${'Address: ' + person.getAddress()}">VALUE</p>
 <p style="color: darkolivegreen" th:text="${person.getId()}">VALUE</p>
 
 
