--- a/CRUD_App1(Hibernate)/src/main/webapp/WEB-INF/views/people/index.html
+++ b/CRUD_App1(Hibernate)/src/main/webapp/WEB-INF/views/people/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>All people</title>
 </head>
 <body>
 
-<div style="color: orangered" th:each="person : ${people}">
+<div th:each="person : ${people}">
   <a th:href="@{/people/{id}(id=${person.getId()})}"
      th:text="${person.getName() + ', ' + person.getAge()}">user</a>
 </div>
